--- a/conf/cforum.conf.example
+++ b/conf/cforum.conf.example
@@ -1,41 +1,33 @@
-#
-# This is the Classic Forum configuration file
-# Configuration is done via small LUA scripts
-#
+--
+-- Classic Forum configuration file
+--
 
-ModulePath "/usr/lib/cforum/"
+CForum:set_value('ModulePath',"/usr/lib/cforum/");
+CForum:set_value('Forums',{"FORUM1","FORUM2","FORUM3"});
 
-Forums ["FORUM1","FORUM2","FORUM3"]
+context = CForum:create_context("FORUM1");
+context:set_value("MessagePath", "/var/cforum/messages/forum1/");
+context:set_value("ArchivePath", "/var/cforum/archive/forum1/");
+context:set_value("MainFileMaxBytes",250000);    -- start archiving at 250k bytes
+context:set_value("MainFileMaxPostings", 2000);  -- max number of postings before archiver starts
+context:set_value("MainFileMaxThreads", 150);
 
-<Forum "FORUM1">
-  MessagePath "/var/cforum/messages/forum1/"
-  ArchivePath "/var/cforum/archive/forum1/"
-  MainFileMaxBytes 250000    # start archiving at 250k bytes
-  MainFileMaxPostings 2000   # max number of postings before archiver starts
-  MainFileMaxThreads 150
-</Forum>
+context = CForum:create_context("fo_server")
+context:set_value("AuthNames", "/var/cforum/registered_names_forum1.db")
+context:set_value("Socket", "/tmp/cforum.sock")
+context:set_value("RunArchiver", 1800)
 
-#
-# server options
-#
+context:set_value("MinThreads", 5)
+context:set_value("SpareThreads", 5)
+context:set_value("MaxThreads", 120)
 
-AuthNames "/var/cforum/registered_names_forum1.db"
-Socket "/tmp/cforum.sock"
-RunArchiver 1800
+context:set_value("UserGroup", {"ckruse", "users"})
 
-MinThreads 5
-SpareThreads 5
-MaxThreads 120
+context:set_value("Chroot","/home/ckruse/tmp/cforum/chroot/")
+context:set_value("PIDFile", "/var/run/cf_pid")
+context:set_value("LogMaxSize", 2097152)
 
-UserGroup ["ckruse", "users"]
+context:set_value("ErrorLog", "/var/log/cf_errors")
+context:set_value("StdLog", "/var/log/cf_stdlog")
 
-Chroot "/home/ckruse/tmp/cforum/chroot/"
-PIDFile "/var/run/cf_pid"
-LogMaxSize 2097152
-
-ErrorLog "/var/log/cf_errors"
-StdLog "/var/log/cf_stdlog"
-
-Include "another_file.conf"
-
-# eof
+-- eof
