Bugfixes in server cleanup
Did a lot of bugfixes in server cleanup:
- Wrote a pthread_join() routine for proper thread cleanup
- Changed locking in cf_log() to locking via pthread_mutex_lock to avoid
  endless recursive cf_log() calls when lock debugging activated
- Added a workers array so that we can communicate with the worker
  threads
- Fixed server shutdown code
- Fixed lock debugging code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ option(ENABLE_DEBUG "enable debugging mode" OFF)
 # Copy flags for config.h
 if(ENABLE_DEBUG STREQUAL "ON")
   set(DEBUG ON)
-  add_definitions(-DCF_DEBUG -O0 -g)
+  add_definitions(-DCF_DEBUG -DCF_LOCK_DEBUG -O0 -g)
 else(ENABLE_DEBUG STREQUAL "ON")
   set(DEBUG OFF)
 endif(ENABLE_DEBUG STREQUAL "ON")
