--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ endif(ENABLE_LOCK_DEBUG STREQUAL "ON")
 add_definitions(-W -Wall -funsigned-char -I. -D_REENTRANT -D_GNU_SOURCE -I${LUA_INCLUDE_DIR})
 
 CHECK_FUNCTION_EXISTS(kqueue HAVE_KQUEUE)
-CHECK_FUNCTION_EXISTS(epoll HAVE_EPOLL)
+CHECK_FUNCTION_EXISTS(epoll_create HAVE_EPOLL)
 CHECK_FUNCTION_EXISTS(select HAVE_SELECT)
 
 if(NOT HAVE_KQUEUE AND NOT HAVE_EPOLL AND NOT HAVE_SELECT)
