more improvements for kqueue implementation, added epoll implementation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,9 +34,9 @@ if(HAVE_KQUEUE)
   list(APPEND SRC cf_server_kqueue.c)
 elseif(HAVE_EPOLL)
   list(APPEND SRC cf_server_epoll.c)
-else(HAVE_KQUEUE)
+else()
   list(APPEND SRC cf_server_select.c)
-endif(HAVE_KQUEUE)
+endif()
 add_executable(cf_server ${SRC})
 target_link_libraries(cf_server cfutils cfconfigparser cfhash cfutils cfserver ${CMAKE_THREAD_LIBS_INIT})
 
