Added modules to build system. No real modules yet, just dummies.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY
 include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR})
 
 add_subdirectory(utils)
+add_subdirectory(modules)
 
 # libcfreadline
 add_library(cfreadline SHARED readline.c)
