Rewored build system, part 1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,48 @@
-cmake_minimum_required(VERSION 2.4)
+#############################################################################
+# Main CMakeLists.txt for the Classic Forum
+#############################################################################
+
+# Require CMake version 2.6, don't automatically add library paths to linker
+cmake_minimum_required(VERSION 2.6)
 if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
-endif(COMMAND cmake_policy)
+endif()
 
 project(cforum C)
 
+# Set a default build type for single-configuration
+# CMake generators if no build type is set.
+if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
+	set(CMAKE_BUILD_TYPE RelWithDebInfo)
+endif()
 
-set(CF_PREFIX "${CMAKE_INSTALL_PREFIX}")
+# Tell CMake where to find the additional .cmake module files
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules/")
+
+# Set CFlags for different profiles (FIXME: test with different compilers)
+# 1) Default flags: We use C99 code
+set(CMAKE_C_FLAGS "-std=c99")
+# 2) Debug flags: We want to activate debbuging codes and warnings should be errors, also define CF_DEBUG
+set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb -Wall -W -pedantic -Werror -DCF_DEBUG")
+# 3) Release flags: We want to optimize the source code
+set(CMAKE_C_FLAGS_RELEASE "-O2")
+# 4) Release + Debug Info flags: Optimize code but add debug symbols
+set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")
+# 5) Release optimized for size
+set(CMAKE_C_FLAGS_MINSIZEREL "-Os")
+
+# Add default definitions
+#     FIXME: do we really need _GNU_SOURCE? portability?
+#            why do we need _REENTRANT?
+add_definitions(-D_REENTRANT -D_GNU_SOURCE)
+
+# Fine-grained debugging options
+option(ENABLE_LOCK_DEBUG, "enable lock debugging" OFF)
+if(ENABLE_LOCK_DEBUG STREQUAL "ON")
+	add_definitions(-DCF_LOCK_DEBUG)
+endif()
+
+# Include Useful Macros
 include(CheckLibraryExists)
 include(CheckSymbolExists)
 include(CheckFunctionExists)
@@ -15,96 +50,72 @@ include(CheckIncludeFile)
 include(CheckTypeSize)
 include(UsePkgConfig)
 include(CMakeInstallDirs)
-include(FindLua51)
 
-option(ENABLE_DEBUG "enable debugging mode" OFF)
-option(ENABLE_LOCK_DEBUG "enable lock debugging" OFF)
+# CMake Prefix Handling
+if(NOT CMAKE_INSTALL_PREFIX)
+	# default install prefix
+	set(CF_PREFIX "/usr/local")
+else()
+	set(CF_PREFIX "${CMAKE_INSTALL_PREFIX}")
+endif()
 
-# Copy flags for config.h
-if(ENABLE_DEBUG STREQUAL "ON")
-  set(DEBUG ON)
-  add_definitions(-DCF_DEBUG -O0 -g)
-else(ENABLE_DEBUG STREQUAL "ON")
-  set(DEBUG OFF)
-endif(ENABLE_DEBUG STREQUAL "ON")
+# Look for dl(), some UNIX systems have it in -ldl, others in C library
+check_library_exists(dl dlopen "" HAVE_LIBDL)
+if(NOT HAVE_LIBDL)
+	check_library_exists("" dlopen "" _HAVE_DIRECT_DLOPEN)
+	if(NOT _HAVE_DIRECT_DLOPEN)
+		message(FATAL_ERROR "Could not find dlopen() in -ldl or in system C library")
+	endif()
+endif()
 
-add_definitions(-W -Wall -Werror -funsigned-char -I. -D_REENTRANT -D_GNU_SOURCE -I${LUA_INCLUDE_DIR})
+# Look for iconv(), some UNIX systems have it in -liconv, others in C library
+check_library_exists(iconv iconv "" HAVE_LIBICONV)
+if(NOT HAVE_LIBICONV)
+	check_library_exists("" iconv "" _HAVE_DIRECT_ICONV)
+	if(NOT _HAVE_DIRECT_ICONV)
+		message(FATAL_ERROR "Could not find iconv() in -liconv or in system C library")
+	endif()
+endif()
 
-if(ENABLE_LOCK_DEBUG STREQUAL "ON")
-  add_definitions(-DCF_LOCK_DEBUG)
-endif(ENABLE_LOCK_DEBUG STREQUAL "ON")
+# Check for FP constants in float.h
+check_symbol_exists(FLT_EPSILON "float.h" HAVE_FLT_EPSILON)
+if(NOT HAVE_FLT_EPSILON)
+	message(FATAL_ERROR "No C99 standards-compliant float.h with definition of FLT_EPSILON found.")
+endif()
+check_symbol_exists(DBL_EPSILON "float.h" HAVE_DBL_EPSILON)
+if(NOT HAVE_DBL_EPSILON)
+	message(FATAL_ERROR "No C99 standards-compliant float.h with definition of DBL_EPSILON found.")
+endif()
 
-CHECK_FUNCTION_EXISTS(kqueue HAVE_KQUEUE)
-CHECK_FUNCTION_EXISTS(epoll_create HAVE_EPOLL)
-CHECK_FUNCTION_EXISTS(select HAVE_SELECT)
+# Test for these functions since replacements exist
+set(CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
+check_symbol_exists(strdup "string.h" HAVE_STRDUP)
+check_symbol_exists(strndup "string.h" HAVE_STRNDUP)
+check_symbol_exists(getline "stdio.h" HAVE_GETLINE)
+check_symbol_exists(getdelim "stdio.h" HAVE_GETDELIM)
+set(CMAKE_REQUIRED_DEFINITIONS)
+
+# Look for threads
+find_package(Threads REQUIRED)
+if(NOT CMAKE_USE_PTHREADS_INIT)
+	message(FATAL_ERROR "Only pthreads are supported currently")
+endif()
+# usage: target_link_libraries(myexe ${CMAKE_THREAD_LIBS_INIT})
+
+# kqueue / epoll / select
+check_function_exists(kqueue HAVE_KQUEUE)
+check_function_exists(epoll_create HAVE_EPOLL)
+check_function_exists(select HAVE_SELECT)
 
 if(NOT HAVE_KQUEUE AND NOT HAVE_EPOLL AND NOT HAVE_SELECT)
   message(FATAL_ERROR "Could not find kqueue(2), nor epoll(4) neither select(2)")
-endif(NOT HAVE_KQUEUE AND NOT HAVE_EPOLL AND NOT HAVE_SELECT)
+endif()
 
-if(NOT LUA51_FOUND)
-  message(FATAL_ERROR "Could not find LUA 5.1")
-endif(NOT LUA51_FOUND)
-
-# Differences between UNIX systems:
-#   Some define dlopen()/... in -ldl
-#   Others define it in the C library
-#   Same with iconv() in -liconv or in C library
-
-check_library_exists (dl dlopen "" HAVE_LIBDL)
-if (NOT HAVE_LIBDL)
-  check_library_exists ("" dlopen "" HAVE_DLOPEN)
-  if (NOT HAVE_DLOPEN)
-    message (FATAL_ERROR "Could not find dlopen() in -ldl or in standard library")
-  endif (NOT HAVE_DLOPEN)
-endif (NOT HAVE_LIBDL)
-check_library_exists (iconv iconv "" HAVE_LIBICONV)
-if (NOT HAVE_LIBICONV)
-  check_library_exists ("" iconv "" HAVE_ICONV)
-  if (NOT HAVE_ICONV)
-    message (FATAL_ERROR "Could not find iconv() in -liconv or in standard library")
-  endif (NOT HAVE_ICONV)
-endif (NOT HAVE_LIBICONV)
-
-# Don't do the same stupid stuff autoconf does in checking for
-# lot's of functions that modern OS have anyway. Should anybody
-# want to port this software to some obscure architecture, OS or
-# compiler, then simply add the necessary checks in order to
-# make sure the software runs. Otherwise, don't bother adding
-# tests that will pass on any OS somebody tries this software.
-
-# Test for these functions since replacements exist
-set (CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)
-check_symbol_exists (strdup "string.h" HAVE_STRDUP)
-check_symbol_exists (strndup "string.h" HAVE_STRNDUP)
-check_symbol_exists (getline "stdio.h" HAVE_GETLINE)
-check_symbol_exists (getdelim "stdio.h" HAVE_GETDELIM)
-
-set (CMAKE_EXTRA_INCLUDE_FILES sys/types.h)
-check_type_size (u_char U_CHAR)
-check_type_size (bool BOOL)
-set (CMAKE_EXTRA_INCLUDE_FILES)
-
-find_package (Threads REQUIRED)
-if (NOT CMAKE_USE_PTHREADS_INIT)
-  message (FATAL_ERROR "Only pthreads are supported currently")
-endif (NOT CMAKE_USE_PTHREADS_INIT)
-#use: TARGET_LINK_LIBRARIES(myexe ${CMAKE_THREAD_LIBS_INIT})
-
+# Find required packages
+find_package(Lua51 REQUIRED)
 find_package(IDN REQUIRED)
 find_package(ICU REQUIRED)
-
-include_directories(${IDN_INCLUDE_DIR} ${ICU_INCLUDE})
-
-# Make sure rpath is ok
-SET(CMAKE_SKIP_BUILD_RPATH FALSE)
-SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-IF (${CMAKE_INSTALL_LIBDIR} MATCHES "^/")
-  SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_LIBDIR}/cforum")
-ELSE (${CMAKE_INSTALL_LIBDIR} MATCHES "^/")
-  SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/cforum")
-ENDIF (${CMAKE_INSTALL_LIBDIR} MATCHES "^/")
-SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+include_directories("${LUA_INCLUDE_DIR}" "${IDN_INCLUDE_DIR}" "${ICU_INCLUDE}")
 
 add_subdirectory(src)
 
