--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,12 @@
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+#############################################################################
+# CMakeLists.txt for the Classic Forum Main Sourcecode
+#############################################################################
+
+# Configuration files
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake" "${CMAKE_CURRENT_BINARY_DIR}/config.h")
 include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR})
 
+# Add utility libraries and modules
 add_subdirectory(utils)
 add_subdirectory(modules)
 
@@ -28,20 +34,23 @@ endif(HAVE_LIBDL)
 # libcfserver
 # use kqueue or epoll if possible, else select
 if(HAVE_KQUEUE)
-  SET(SRC cf_server_kqueue.c)
+  SET(CF_SERVER_SRC cf_server_kqueue.c)
 elseif(HAVE_EPOLL)
-  SET(SRC cf_server_epoll.c)
+  SET(CF_SERVER_SRC cf_server_epoll.c)
 else()
-  SET(SRC cf_server_select.c)
+  SET(CF_SERVER_SRC cf_server_select.c)
 endif()
 
-add_library(cfserver SHARED serverlib.c cf_pthread.c operation_queue.c http_server.c threading_manager_worker.c ${SRC})
+add_library(cfserver SHARED serverlib.c cf_pthread.c operation_queue.c http_server.c threading_manager_worker.c ${CF_SERVER_SRC})
 target_link_libraries(cfserver cfutils cfconfigparser cfreadline ${CMAKE_THREAD_LIBS_INIT})
 
 # cf_server
 add_executable(cf_server cf_server.c)
 target_link_libraries(cf_server cfutils cfconfigparser cfhash cfutils cfserver ${CMAKE_THREAD_LIBS_INIT})
 
+# Install targets:
+#   cf_server -> /usr/sbin
+#   libcf*    -> /usr/lib
 install(
   TARGETS
     cfreadline
@@ -51,13 +60,13 @@ install(
     cfconfigparser
     cfserver
     cf_server
-  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/cforum
+  RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
 install(
   FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/config.h
+    "${CMAKE_CURRENT_BINARY_DIR}/config.h"
     cf_pthread.h
     cf_server.h
     cgi.h
@@ -67,7 +76,7 @@ install(
     serverlib.h
     validate.h
   DESTINATION
-    ${CMAKE_INSTALL_PREFIX}/include/cforum
+    "${CMAKE_INSTALL_PREFIX}/include/cforum"
 )
 
 # eof
