--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,79 +4,16 @@
 
 # Configuration files
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake" "${CMAKE_CURRENT_BINARY_DIR}/config.h")
-include_directories(BEFORE ${CMAKE_CURRENT_BINARY_DIR})
+include_directories(BEFORE "${CMAKE_CURRENT_BINARY_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
 
 # Add utility libraries and modules
-add_subdirectory(utils)
-add_subdirectory(modules)
+add_subdirectory(json)
+add_subdirectory(exceptions)
+add_subdirectory(jsevaluator)
+#add_subdirectory(couchdb)
 
-# libcfreadline
-add_library(cfreadline SHARED readline.c)
+add_library(cfconfigparser SHARED Configparser.cc)
+target_link_libraries(cfconfigparser cfjsevaluator ${ICU_LIBRARY})
 
-# libcfvalidate
-add_library(cfvalidate SHARED validate.c)
-target_link_libraries(cfvalidate cfutils ${IDN_LIBRARIES})
-
-# libcfhash
-add_library(cfhash SHARED hashlib.c)
-
-# libcfcgi
-add_library(cfcgi SHARED cgi.c)
-target_link_libraries(cfcgi cfhash cfutils)
-
-# libcfconfigparser
-add_library(cfconfigparser SHARED configparser.c configparser_lua.c)
-target_link_libraries(cfconfigparser cfutils cfhash ${LUA_LIBRARIES})
-if(HAVE_LIBDL)
-  target_link_libraries(cfconfigparser dl)
-endif(HAVE_LIBDL)
-
-# libcfserver
-# use kqueue or epoll if possible, else select
-if(HAVE_KQUEUE)
-  SET(CF_SERVER_SRC cf_server_kqueue.c)
-elseif(HAVE_EPOLL)
-  SET(CF_SERVER_SRC cf_server_epoll.c)
-else()
-  SET(CF_SERVER_SRC cf_server_select.c)
-endif()
-
-add_library(cfserver SHARED serverlib.c cf_pthread.c operation_queue.c http_server.c threading_manager_worker.c ${CF_SERVER_SRC})
-target_link_libraries(cfserver cfutils cfconfigparser cfreadline ${CMAKE_THREAD_LIBS_INIT})
-
-# cf_server
-add_executable(cf_server cf_server.c)
-target_link_libraries(cf_server cfutils cfconfigparser cfhash cfutils cfserver ${CMAKE_THREAD_LIBS_INIT})
-
-# Install targets:
-#   cf_server -> /usr/sbin
-#   libcf*    -> /usr/lib
-install(
-  TARGETS
-    cfreadline
-    cfhash
-    cfcgi
-    cfvalidate
-    cfconfigparser
-    cfserver
-    cf_server
-  RUNTIME DESTINATION ${CMAKE_INSTALL_SBINDIR}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
-
-install(
-  FILES
-    "${CMAKE_CURRENT_BINARY_DIR}/config.h"
-    cf_pthread.h
-    cf_server.h
-    cgi.h
-    configparser.h
-    hashlib.h
-    readline.h
-    serverlib.h
-    validate.h
-  DESTINATION
-    "${CMAKE_INSTALL_PREFIX}/include/cforum"
-)
 
 # eof
