added CPP UnitTests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,8 @@ endif()
 find_package(v8 REQUIRED)
 find_package(IDN REQUIRED)
 find_package(ICU REQUIRED)
+find_package(CPPUNIT REQUIRED)
+
 include_directories("${IDN_INCLUDE_DIR}" "${ICU_INCLUDE}")
 
 add_subdirectory(src)
