--- a/src/couchdb/CMakeLists.txt
+++ b/src/couchdb/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 
 
 # libcfcouchdb
-add_library(cfcouchdb SHARED CouchDBInterface.cc Document.cc)
+add_library(cfcouchdb SHARED Server.cc Document.cc)
 
 target_link_libraries(cfcouchdb cfexceptions cfjson ${CURL_LIBRARY})
 
