more work on CouchDB interface

--- a/src/exceptions/CMakeLists.txt
+++ b/src/exceptions/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(cfexceptions SHARED
   JSEvaluatorException.cc
   JSONSyntaxException.cc
   JSONException.cc
+  CouchErrorException.cc
 )
 
 # eof
