added CGI module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(json)
 add_subdirectory(exceptions)
 add_subdirectory(jsevaluator)
 add_subdirectory(couchdb)
+add_subdirectory(cgi)
 
 add_subdirectory(tests)
 
