--- a/src/tests/cgi/CMakeLists.txt
+++ b/src/tests/cgi/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_library(cfjson_test SHARED JSONTest.cc)
-target_link_libraries(cfjson_test cfjson cppunit)
+add_library(cfcgi_test SHARED CGITest.cc)
+target_link_libraries(cfcgi_test cfcgi cppunit)
 
 # eof
