--- a/src/cgi/CMakeLists.txt
+++ b/src/cgi/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 
 
 # libcfcgi
-add_library(cfcgi SHARED CGI.cc Parameter.cc)
+add_library(cfcgi SHARED CGI.cc)
 
 target_link_libraries(cfcgi cfexceptions ${ICU_LIBRARY})
 
