--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -7,12 +7,14 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 add_subdirectory(cgi)
 add_subdirectory(json)
 add_subdirectory(couchdb)
+add_subdirectory(template)
 
 add_executable(run_tests run_tests.cc)
 target_link_libraries(run_tests
   cfjson_test
   cfcgi_test
   cfcouchdb_test
+  cftemplate_test
 )
 
 add_custom_target(tests "run_tests" DEPENDS run_tests COMMENT "Running CPPUNIT tests...")
