A lot of work on the template engine. Now basic interaction with v8 works

--- a/src/template/CMakeLists.txt
+++ b/src/template/CMakeLists.txt
@@ -9,6 +9,6 @@ add_library(cftemplate SHARED
   Template.cc
 )
 
-target_link_libraries(cftemplate cfexceptions ${ICU_LIBRARY})
+target_link_libraries(cftemplate cfexceptions v8 ${ICU_LIBRARY})
 
 # eof
