--- a/src/template/CMakeLists.txt
+++ b/src/template/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 # libcfjson
 add_library(cftemplate SHARED
   Template.cc
+  TemplateParser.cc
 )
 
 target_link_libraries(cftemplate cfexceptions v8 ${ICU_LIBRARY})
