--- a/src/template/CMakeLists.txt
+++ b/src/template/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 add_library(cftemplate SHARED
   Template.cc
   TemplateParser.cc
+  Extender.cc
 )
 
 target_link_libraries(cftemplate cfexceptions v8 ${ICU_LIBRARY})
