began to implement the request handler

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,9 @@ target_link_libraries(cfconfigparser cfjsevaluator ${ICU_LIBRARY})
 add_library(cfuri SHARED URI.cc)
 target_link_libraries(cfuri cfexceptions)
 
+add_library(cfrequest SHARED Request.cc)
+target_link_libraries(cfrequest cfexceptions cfuri cfcgi)
+
 #add_library(cfrouter SHARED Router.cc)
 #target_link_libraries(cfrouter ${ICU_LIBRARY})
 
