--- a/src/tests/framework/CMakeLists.txt
+++ b/src/tests/framework/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_library(cfframework_test SHARED URITest.cc)
-target_link_libraries(cfframework_test cfuri cppunit)
+add_library(cfframework_test SHARED URITest.cc UserTest.cc)
+target_link_libraries(cfframework_test cfframework cppunit)
 
 # eof
