renamed json/* from CamelCase to lower_case

--- a/src/json/CMakeLists.txt
+++ b/src/json/CMakeLists.txt
@@ -6,14 +6,14 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 
 # libcfjson
 add_library(cfjson SHARED
-  JSONArray.cc
-  JSONElement.cc
-  JSONNull.cc
-  JSONString.cc
-  JSONObject.cc
-  JSONBoolean.cc
-  JSONNumber.cc
-  JSONParser.cc
+  json_array.cc
+  json_element.cc
+  json_null.cc
+  json_string.cc
+  json_object.cc
+  json_boolean.cc
+  json_number.cc
+  json_parser.cc
 )
 
 target_link_libraries(cfjson cfexceptions ${ICU_LIBRARY})
