--- a/src/jsevaluator/CMakeLists.txt
+++ b/src/jsevaluator/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 
 
 # libcfjsevaluator
-add_library(cfjsevaluator SHARED JSEvaluator.cc)
+add_library(cfjsevaluator SHARED js_evaluator.cc)
 
 target_link_libraries(cfjsevaluator cfexceptions ${ICU_LIBRARY} v8)
 
