renamed from Template.* to template.*

--- a/src/template/CMakeLists.txt
+++ b/src/template/CMakeLists.txt
@@ -6,9 +6,9 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 
 # libcfjson
 add_library(cftemplate SHARED
-  Template.cc
-  TemplateParser.cc
-  Extender.cc
+  template.cc
+  template_parser.cc
+  extender.cc
 )
 
 target_link_libraries(cftemplate cfexceptions v8 ${ICU_LIBRARY})
