--- a/src/tests/json/CMakeLists.txt
+++ b/src/tests/json/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SOURCE_DIR}")
 
-add_library(cfjson_test SHARED JSONTest.cc)
+add_library(cfjson_test SHARED json_test.cc)
 target_link_libraries(cfjson_test cfjson cppunit)
 
 # eof
