--- a/src/exceptions/CMakeLists.txt
+++ b/src/exceptions/CMakeLists.txt
@@ -15,6 +15,8 @@ add_library(cfexceptions SHARED
   parameter_exception.cc
   cgi_parser_exception.cc
   uri_exception.cc
+  route_exception.cc
+  route_syntax_exception.cc
 )
 
 # eof
