--- a/src/framework/CMakeLists.txt
+++ b/src/framework/CMakeLists.txt
@@ -15,6 +15,8 @@ add_library(cfframework SHARED
   route_exception.cc
   route_syntax_exception.cc
   controller.cc
+  framework_exception.cc
+  not_found_exception.cc
 )
 
 target_link_libraries(cfframework cfexceptions cfcgi ${ICU_LIBRARY} ${PCREPP_LIBRARIES})
