fix for boost library searching

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,8 +109,10 @@ find_package(IDN REQUIRED)
 find_package(ICU REQUIRED)
 find_package(CPPUNIT REQUIRED)
 find_package(CURL REQUIRED)
-find_package(Boost REQUIRED)
 find_package(PCREPP REQUIRED)
+
+set(BOOST_LIBS serialization filesystem system)
+find_package(Boost COMPONENTS ${BOOST_LIBS} REQUIRED)
 
 include_directories("${IDN_INCLUDE_DIR}" "${ICU_INCLUDE}" "${Boost_INCLUDE_DIRS}" "${PCREPP_INCLUDE_DIR}")
 
