changed to new v8 finding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,7 @@ endif()
 
 
 # Find required packages
-find_package(v8 REQUIRED)
+find_package(V8 REQUIRED)
 find_package(IDN REQUIRED)
 find_package(ICU REQUIRED)
 find_package(CPPUNIT REQUIRED)
