--- a/src/jsevaluator/CMakeLists.txt
+++ b/src/jsevaluator/CMakeLists.txt
@@ -8,6 +8,6 @@ include_directories (BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/.." "${CMAKE_CURRENT_SO
 # libcfjsevaluator
 add_library(cfjsevaluator SHARED js_evaluator.cc js_evaluator_exception.cc)
 
-target_link_libraries(cfjsevaluator cfexceptions ${ICU_LIBRARY} v8)
+target_link_libraries(cfjsevaluator cfexceptions ${ICU_LIBRARY} ${V8_LIBRARY})
 
 # eof
