now throwing the correct exception (TemplateParserException)

--- a/src/template/CMakeLists.txt
+++ b/src/template/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(cftemplate SHARED
   template.cc
   template_parser.cc
   extender.cc
+  template_exception.cc
+  template_parser_exception.cc
 )
 
 target_link_libraries(cftemplate cfexceptions ${V8_LIBRARY} ${ICU_LIBRARY})
