a lot of work for the cforum

--- a/src/framework/CMakeLists.txt
+++ b/src/framework/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(cfframework SHARED
   config_error_exception.cc
   application.cc
   module_exception.cc
+  cgi_application.cc
 )
 
 target_link_libraries(cfframework cfexceptions cfcgi cfjsevaluator ${Boost_LIBRARIES} ${ICU_LIBRARY} ${PCREPP_LIBRARIES})
